--- a/tienda/src/main/resources/application.properties
+++ b/tienda/src/main/resources/application.properties
@@ -7,5 +7,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
+# JWT
+security.jwt.secret=ghk45jgherogho834go3h4g
+security.jwt.issuer=Main
+#La sesion dura una semana
+security.jwt.ttlMillis=604800000
 
